src/styles.scss
*,
:after,
:before {
    box-sizing: border-box;
}

$bg: #ffffff;
$fg: #000000;
$passive: rgba(0, 0, 0, 0.2);
$passive-2: rgba(0, 0, 0, 0.05);
$passive-3: rgba(0, 0, 0, 0.03);
$active: #14628b;
$active-2: #1a92bd;
$problem: #be310c;
$problem-2: #e35b41;

html {
    font-family: sans-serif;
    font-size: 14px;
    background-color: $passive-2;
}

.initially-hidden {
    visibility: hidden;
    display: none;

    &.visible {
        visibility: visible;
        display: initial;
    }
}

body,
html {
    margin: 0;
    padding: 0;
}

main {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 100vh;
    flex-flow: column;
}

.widget.widget-main ng-component {
    $main-padding: 30px;
    $main-width: 430px;
    width: $main-width;
    background: $bg;
    $mobile-threshold-width: $main-width * 1.5;
    box-shadow: 0 0 5em $passive;
    border: 0.1em solid $passive-2;
    border-radius: 1rem;

    color: $fg;
    display: block;

    @media only screen and (max-width: $mobile-threshold-width) {
        & {
            width: 100%;
            box-shadow: none;
            border-radius: 0;
            border: 0.1em 0 0.1em 0 solid $passive-2;
        }
    }

    header {
        padding: $main-padding $main-padding 15px $main-padding;
        text-align: center;

        & > img, & > app-spinner > svg {
            height: 96px;
            width: 96px;
        }

        // Initial source by: https://glennmccomb.com/articles/building-a-pure-css-animated-svg-spinner/
        app-spinner > svg {
            animation: 2s linear infinite svg-animation;
            max-width: 100px;

            @keyframes svg-animation {
                0% {
                    transform: rotateZ(0deg);
                }
                100% {
                    transform: rotateZ(360deg)
                }
            }

            circle {
                animation: 1.4s ease-in-out infinite both circle-animation;
                display: block;
                fill: transparent;
                stroke: $active;
                stroke-linecap: round;
                stroke-dasharray: 283;
                stroke-dashoffset: 280;
                stroke-width: 10px;
                transform-origin: 50% 50%;
            }

            @keyframes circle-animation {
                0%,
                25% {
                    stroke-dashoffset: 280;
                    transform: rotate(0);
                }

                50%,
                75% {
                    stroke-dashoffset: 75;
                    transform: rotate(45deg);
                }

                100% {
                    stroke-dashoffset: 280;
                    transform: rotate(360deg);
                }
            }}
    }

    div.forms,
    div.messages {
        padding: 0 $main-padding $main-padding $main-padding;
    }

    div.messages {
        text-align: center;
    }
}

form {
    border: none;
    margin: 0;
    padding: 0;
}

input,
textarea,
.input-like {
    color: $fg;
    padding: 0.7em 1em;
    border-radius: 0.2rem;
    border: 0.05em solid $passive;
    outline: none;
    width: 100%;
    resize: none;
    margin: 0;

    &::placeholder {
        color: $passive;
    }
    &:-ms-input-placeholder {
        color: $passive;
    }
    &::-ms-input-placeholder {
        color: $passive;
    }
    &:focus {
        outline: none;
        color: $active;
        border-color: $active;
        box-shadow: 0 0 0.4em $active-2;
    }

    & > li {
        margin-bottom: 0.8em;
        &:last-child {
            margin-bottom: 0;
        }
    }
    list-style: none;
}

.control {
    margin-bottom: 1em;

    & > label {
        color: $fg;
        display: block;
    }

    & > input {
        margin-top: 0.25em;
    }
}

form.procedure-external {
    & > * {
        margin-bottom: 0.8em;
    }

    & > *:last-child {
        margin-bottom: 0;
    }
}

ul.problems {
    margin: 0.2em 0 0 0;
    padding: 0;
    & > li {
        margin: 0;
        padding: 0;
        list-style: none;
        color: $problem;
    }
}

.has-problems label,
label.has-problems,
.has-problems input,
input.has-problems,
.has-problems li,
li.has-problems {
    color: $problem;
}

.has-problems input,
input.has-problems {
    outline: none;
    border-color: $problem;

    &:focus {
        box-shadow: 0 0 0.4em $problem-2;
    }
}

div.horizontal-divider {
    color: $passive;
    margin: 1em 0;
    text-align: center;
    display: flex;
    flex-wrap: nowrap;
    -webkit-box-align: center;
    align-items: center;
    gap: 1em;
    font-size: 0.8em;
    font-weight: bold;

    &::before,
    &::after {
        content: '';
        display: inline-block;
        border-bottom: 0.05em solid $passive;
        -webkit-box-flex: 1;
        flex-grow: 1;
    }
}

div.button-bar {
    display: flex;
    gap: 0.5em;
}

div.button-bar > * {
    flex: 1;
}

button {
    border: 0.05em solid $passive;
    border-radius: 0.2rem;
    background: $passive-2;
    color: $fg;
    padding: 0.7em 1em;
    margin: 0;
    cursor: pointer;

    &[disabled] {
        background: $passive-3;
        color: $passive;
        cursor: not-allowed;
    }

    &.hidden {
        display: none;
    }

    &:active {
        background: $passive-3;
    }

    &.primary {
        border-color: transparent;
        background: $active;
        color: $bg;

        &:active {
            background: $active-2;
        }

        &[disabled],
        &[disabled]:active {
            background: $active-2;
            color: $passive;
        }
    }

    &.secondary {
        border-color: $passive;
        background: $bg;
        color: $fg;
    }

    &:focus {
        border-color: $active;
        box-shadow: 0 0 0.4em $active-2;
        outline: none;
    }

    &.single {
        width: 100%;
        display: flex;
        padding: 0.3em;
        align-items: center;

        &:active {
            background: $passive-3;
        }

        & > img {
            width: 2em;
            margin: 0 1em 0 0;
        }
    }
}

app-footer, noscript {
    margin: 1em;
    text-align: center;
    max-width: 430px;
    color: $bg;
    text-shadow: 0 0 20px $fg;

    a, a:hover, a:active {
        color: $bg;
    }
}

#PopupAutoComplete,
#PopupAutoComplete > richlistbox > richlistitem[originaltype="generatedPassword"] > .two-line-wrapper > .ac-site-icon,
#PopupAutoComplete > richlistbox > richlistitem[originaltype="loginWithOrigin"] > .two-line-wrapper > .ac-site-icon,
#PopupAutoComplete > richlistbox > richlistitem[originaltype="login"] > .ac-site-icon,
richlistbox.autocomplete-richlistbox > richlistitem {
    fill:red !important;
    color: red !important;
    background: blue !important;
}

#PopupAutoComplete > richlistbox > richlistitem[originaltype="loginsFooter"] {
    background-color: #222 !important;
    color: #999 !important;
    border: 1px solid #444 !important;
}

